--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-fexofenadine woz ere
+<!DOCTYPE html>
+<html>
+<head>
+    <title>fexofenadine</title>
+    <style>
+        body {
+            background-color: #1E1E1E;
+            color: #C74E39;
+            font-family: 'Helvetica', sans-serif;
+            font-size: 4em;
+        }
+        a {
+            color: #007ACC;
+            text-decoration: none;
+        }
+        a:hover {
+            color: #888;
+        }
+    </style>
+</head>
+<body>
+    <center>
+        fexofenadine woz ere!
+        <br /><br /><br />
+        <a href="https://foodgit.github.io">gitFOOD</a>
+        <br /><br /><br />
+        <a href="vsse/">Vampire Survivors Savegame Editor</a>
+    </center>
+</body>
+</html>
