--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             color: #888;
         }
     </style>
+    <link rel="icon" href="https://avatars.githubusercontent.com/u/13533014">
 </head>
 <body>
     <center>
