--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
         <a href="https://foodgit.github.io">gitFOOD</a>
         <br /><br /><br />
         <a href="vsse/">Vampire Survivors Savegame Editor</a>
+        <br /><br /><br />
+        <a href="https://github.com/fexofenadine">My GitHub Page</a>
+        <br /><br /><br />
+        <a href="https://gist.github.com/fexofenadine">My Gists</a>   
     </center>
 </body>
 </html>
