--- a/index.html
+++ b/index.html
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>fexofenadine</title>
-    <style>
-        body {
-            background-color: #1E1E1E;
-            color: #C74E39;
-            font-family: 'Helvetica', sans-serif;
-            font-size: 4em;
-        }
-        a {
-            color: #007ACC;
-            text-decoration: none;
-        }
-        a:hover {
-            color: #888;
-        }
-    </style>
-    <link rel="icon" href="https://avatars.githubusercontent.com/u/13533014">
-</head>
-<body>
-    <center>
-        fexofenadine woz ere!
-        <br /><br /><br />
-        <a href="https://foodgit.github.io">gitFOOD</a>
-        <br /><br /><br />
-        <a href="vsse/">Vampire Survivors Savegame Editor</a>
-        <br /><br /><br />
-        <a href="https://github.com/fexofenadine">My GitHub Page</a>
-        <br /><br /><br />
-        <a href="https://gist.github.com/fexofenadine">My Gists</a>   
-    </center>
-</body>
+    <head>
+        <title>fexofenadine</title>
+        <style>
+            body {
+                background-color: #1E1E1E;
+                color: #C74E39;
+                font-family: 'Helvetica', sans-serif;
+                font-size: 4em;
+            }
+            quote {
+                color: cyan;
+                font-size: 0.5em;
+            }
+            author {
+                color: darkcyan;
+            }
+            a {
+                color: #007ACC;
+                text-decoration: none;
+            }
+            a:hover {
+                color: cyan;
+            }
+        </style>
+        <link rel="icon" href="https://avatars.githubusercontent.com/u/13533014">
+    </head>
+    <body>
+        <center>
+            <!-- fexofenadine woz ere! -->
+            <quote>"only assholes quote themselves"<author> -fexofenadine <script>document.write( new Date().getUTCFullYear() );</script></author></quote>
+            <br /><br />
+            <a href="https://foodgit.github.io">gitFOOD</a>
+            <br /><br />
+            <a href="vsse/">Vampire Survivors Savegame Editor</a>
+            <br /><br />
+            <a href="https://github.com/fexofenadine">My GitHub Page</a>
+            <br /><br />
+            <a href="https://gist.github.com/fexofenadine">My Gists</a>   
+        </center>
+    </body>
 </html>
