--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <body>
         <center>
             <!-- fexofenadine woz ere! -->
-            <quote>"only assholes quote themselves"<author> -fexofenadine <script>document.write( new Date().getUTCFullYear() );</script></author></quote>
+            <quote>"only assholes quote themselves"<author>-&nbsp;fexofenadine,&nbsp;<script>document.write( new Date().getUTCFullYear() );</script></author></quote>
             <br /><br />
             <a href="https://foodgit.github.io">gitFOOD</a>
             <br /><br />
